Implement tracking of each auth'd user's favorite tapes
